Отправка заявки через почту и тг работает

--- a/Kopigrad/Components/Pages/Admin/Requst/Requst.razor
+++ b/Kopigrad/Components/Pages/Admin/Requst/Requst.razor
@@ -102,6 +102,12 @@
                                         Связаться с клиентом
                                     </a>
                                 }
+                                else if (orders[index].ContactTypeId == 3)
+                                {
+                                    <a href="mailto:@orders[index].Contact" target="_blank" rel="noopener noreferrer">
+                                        Связаться с клиентом
+                                    </a>
+                                }
 
 
                             </div>
