Отсалось только сделать куки, и вход админа. ну и проверки

--- a/Kopigrad/Components/Pages/Admin/Admin.razor
+++ b/Kopigrad/Components/Pages/Admin/Admin.razor
@@ -20,6 +20,7 @@
     <h5 class="TextVhodAdmin">Пароль:</h5>
     <input type="password" class="InputAdmin" />
     <button @onclick="onClickVhod" class="BittonAdminVhod">Войти</button>
+    <a href="/Register" class="TextFindPassword">Зарегистироваться</a>
     <h5 class="TextFindPassword">Забыли пароль</h5>
 </div>
 
