--- a/Kopigrad/Components/App.razor
+++ b/Kopigrad/Components/App.razor
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="~/users.css?v=1.0.1" />
     <link rel="stylesheet" href="~/orders.css?v=1.0.1" />
 
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 
 
     <HeadOutlet />
@@ -41,6 +43,7 @@
             return localStorage.getItem(key);
         };
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
