--- a/Kopigrad/Components/App.razor
+++ b/Kopigrad/Components/App.razor
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="~/admin.css?v=1.0.1" />
     <link rel="stylesheet" href="~/users.css?v=1.0.1" />
     <link rel="stylesheet" href="~/orders.css?v=1.0.1" />
-
+    <link rel="stylesheet" href="~/cardsvisit.css?v=1.0.1" />
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Open+Sans&family=Lato&family=Montserrat&display=swap"
           rel="stylesheet" />
