--- a/Kopigrad/Components/App.razor
+++ b/Kopigrad/Components/App.razor
@@ -13,12 +13,14 @@
     <link rel="stylesheet" href="~/users.css?v=1.0.1" />
     <link rel="stylesheet" href="~/orders.css?v=1.0.1" />
     <link rel="stylesheet" href="~/cardsvisit.css?v=1.0.1" />
+    <link rel="stylesheet" href="~/staticStyle.css?v=1.0.1" />
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Open+Sans&family=Lato&family=Montserrat&display=swap"
           rel="stylesheet" />
 
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
-    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+
 
 
     <HeadOutlet />
@@ -54,6 +56,7 @@
 
     <script src="_framework/blazor.web.js"></script>
 
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 
     <script>
         window.getCookie = function (name) {
