--- a/Kopigrad/Components/Layout/Menu/MenuAdmin.razor
+++ b/Kopigrad/Components/Layout/Menu/MenuAdmin.razor
@@ -1,6 +1,10 @@
 ﻿@inherits LayoutComponentBase
 
+@using MudBlazor
 
+<MudThemeProvider />
+<MudDialogProvider />
+<MudPopoverProvider />
 <div class="main-container">
             <header>
          <Kopigrad.Components.Layout.All.NavMenu />
